# pdfmart

./: CMakeLists.txt  IMerge.h  Logger.cpp  Logger.h  MergePDF.cpp  MergePDF.h  OcrHandler.cpp  OcrHandler.h  OptionDialog.cpp  OptionDialog.h  PDFMergeModel.cpp  PDFMergeModel.h  PDFPageItemDelegate.cpp  PDFPageItemDelegate.h  PDFPagesModel.cpp  PDFPagesModel.h  PMSettings.cpp  PMSettings.h  PageList.h  PopplerTools.cpp  PopplerTools.h  README.md  ToolsTest.cpp  ToolsTest.h  dialog.ui  main.cpp  testfiles.qrc  zoomablepageview.cpp  zoomablepageview.h
CMake/: FindPoppler.cmake
tests/: German_Text-Sophie Albrecht-Das_hoefliche_Gespenst.txt
